2002-05-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03191] typo in file.c:extract_auth_val()?
	* file.c (extract_auth_val): s/177/0177/

2002-05-15  Tsutomu OKADA <okada@furuno.co.jp>

	* [w3m-dev 03190] a tiny patch for configure
	* configure (ask_choice): reset default value

2002-04-27  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03185] Re: cmd_mark in main.c, rev 1.60 broke unmark?
	* main.c (cmd_mark): deleted
		(_mark): xor PE_MARK
		(reMark): or PE_MARK

2002-04-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/.cvsignore: add xface2xpm

2002-04-26  Tushar Samant <scribble@pobox.com>
	
	* [w3m-dev-en 00733] Submission: "English" patch
	* rc.c: update english

2002-04-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00730] Re: Patch for a more flexible dictionary lookup
	* NEWS: rc: use_dictcommand, dictcommand
	* main.c (execdict): use url_quote_conv() instead of cURLcode()
	* proto.h (cURLcode): deleted
	* doc-jp/README.dict: updated

2002-04-25  Tushar Samant <scribble@pobox.com>

	* [w3m-dev-en 00729] Re: Patch for a more flexible dictionary lookup
	* config.h.dist (DICT): define
	* configure (use_dict): default y
	* fm.h (DICTCMD): deleted
		(UseDictCommand): added
		(DictCommand): added
	* main.c (execdict): rewrite to use DictCommand, loadGeneralFile()
	* rc.c (CMT_USE_DICTCOMMAND): added
		(CMT_DICTCOMMAND): added
		(params1): use_dictcommand, dictcommand added
	* doc/README.dict: updated

2002-04-21  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03181] KEYBIND_SRC was not passed to scripts/Makefile
	* Makefile (all-scripts): pass KEYBIND_SRC

2002-04-17  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03178] Parser of ``cols'' and ``rows''
	* frame.c (parseFrameSetLength): added
		(newFrameSet): use parseFrameSetLength()

2002-04-17  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03177] SIGUSR1 --> W3M_SIGIMG in image.c
	* image.c (W3M_SIGIMG): added
		(load_image_handler): s/SIGUSR1/W3M_SIGIMG/